Fix button misalignment

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -256,6 +256,16 @@
 	.btn-success:hover {
 		background-color: #9ac2a9;
 	}
+	.btn-default {
+		margin-top: 2rem;
+		color: #5b5b5b;
+		border: none;
+		margin-left: 2rem;
+		background-color: #e5e5e5;
+	}
+	.btn-default:hover {
+		background-color: #fff;
+	}
 }
 
 .courses {
